--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "lockfile": "^1.0.4",
     "mqtt": "^4.2.8",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.1",
+    "properties-reader": "^2.2.0"
   }
 }
