--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "start": "node start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,13 +19,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "connect-ensure-login": "^0.1.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.2",
     "lockfile": "^1.0.4",
     "mqtt": "^4.2.8",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "properties-reader": "^2.2.0"
   }
