--- a/package.json
+++ b/package.json
@@ -19,18 +19,26 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "chart.js": "^3.7.0",
+    "coap": "^1.0.3",
     "connect-ensure-login": "^0.1.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.2",
+    "http": "0.0.1-security",
     "lockfile": "^1.0.4",
     "mqtt": "^4.2.8",
     "mysql": "^2.18.1",
+    "node-localstorage": "^2.2.1",
+    "node-red-contrib-coap": "^0.6.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
-    "properties-reader": "^2.2.0"
+    "properties-reader": "^2.2.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "store2": "^2.13.1"
   }
 }
